// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing ReassignLocationMenu component renders as expected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Dropdown
    displayValue="(UTC+00:00) El Aaiun"
    setData={[Function]}
    value={
        Array [
            "(UTC+00:00) El Aaiun",
            "(UTC+00:00) Faroe",
            "(UTC+00:00) Freetown",
            "(UTC+00:00) Guernsey",
            "(UTC+00:00) Isle of Man",
            "(UTC+00:00) Jersey",
            "(UTC+00:00) Lisbon",
            "(UTC+00:00) Lome",
            "(UTC+00:00) London",
            "(UTC+00:00) Madeira",
            "(UTC+00:00) Monrovia",
            "(UTC+00:00) Nouakchott",
            "(UTC+00:00) Ouagadougou",
            "(UTC+00:00) Reykjavik",
            "(UTC+00:00) Sao Tome",
            "(UTC+00:00) St. Helena",
            "(UTC+00:00) UTC",
            "(UTC+01:00) Algiers",
            "(UTC+01:00) Amsterdam",
            "(UTC+01:00) Andorra",
            "(UTC+01:00) Bangui",
            "(UTC+01:00) Belgrade",
            "(UTC+01:00) Berlin",
            "(UTC+01:00) Bratislava",
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <div
          onClick={[Function]}
>
          <styled.div>
                    (UTC+00:00) El Aaiun
                    <FaCaretDown />
          </styled.div>
</div>,
        "",
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <styled.div>
            (UTC+00:00) El Aaiun
            <FaCaretDown />
</styled.div>,
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              "(UTC+00:00) El Aaiun",
              <FaCaretDown />,
            ],
          },
          "ref": null,
          "rendered": Array [
            "(UTC+00:00) El Aaiun",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      "",
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <div
            onClick={[Function]}
>
            <styled.div>
                        (UTC+00:00) El Aaiun
                        <FaCaretDown />
            </styled.div>
</div>,
          "",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <styled.div>
              (UTC+00:00) El Aaiun
              <FaCaretDown />
</styled.div>,
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "(UTC+00:00) El Aaiun",
                <FaCaretDown />,
              ],
            },
            "ref": null,
            "rendered": Array [
              "(UTC+00:00) El Aaiun",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        "",
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Testing ReassignLocationMenu component renders as expected 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Dropdown
    count={1}
    displayValue="(UTC+00:00) El Aaiun"
    setData={[Function]}
    value={
        Array [
            "(UTC+00:00) El Aaiun",
            "(UTC+00:00) Faroe",
            "(UTC+00:00) Freetown",
            "(UTC+00:00) Guernsey",
            "(UTC+00:00) Isle of Man",
            "(UTC+00:00) Jersey",
            "(UTC+00:00) Lisbon",
            "(UTC+00:00) Lome",
            "(UTC+00:00) London",
            "(UTC+00:00) Madeira",
            "(UTC+00:00) Monrovia",
            "(UTC+00:00) Nouakchott",
            "(UTC+00:00) Ouagadougou",
            "(UTC+00:00) Reykjavik",
            "(UTC+00:00) Sao Tome",
            "(UTC+00:00) St. Helena",
            "(UTC+00:00) UTC",
            "(UTC+01:00) Algiers",
            "(UTC+01:00) Amsterdam",
            "(UTC+01:00) Andorra",
            "(UTC+01:00) Bangui",
            "(UTC+01:00) Belgrade",
            "(UTC+01:00) Berlin",
            "(UTC+01:00) Bratislava",
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <div
          onClick={[Function]}
>
          <styled.div>
                    (UTC+00:00) El Aaiun
                    <FaCaretDown />
          </styled.div>
</div>,
        "",
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <styled.div>
            (UTC+00:00) El Aaiun
            <FaCaretDown />
</styled.div>,
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              "(UTC+00:00) El Aaiun",
              <FaCaretDown />,
            ],
          },
          "ref": null,
          "rendered": Array [
            "(UTC+00:00) El Aaiun",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      "",
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <div
            onClick={[Function]}
>
            <styled.div>
                        (UTC+00:00) El Aaiun
                        <FaCaretDown />
            </styled.div>
</div>,
          "",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <styled.div>
              (UTC+00:00) El Aaiun
              <FaCaretDown />
</styled.div>,
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "(UTC+00:00) El Aaiun",
                <FaCaretDown />,
              ],
            },
            "ref": null,
            "rendered": Array [
              "(UTC+00:00) El Aaiun",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        "",
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
